Campos ciudad, departamento, zona agregados al modelo
